refactor(server): migrate to ES modules and enhance security
- Convert all require/export to import/export syntax
- Add helmet, rate limiting, and structured logging
- Implement axios wrapper with retry and rate limiting
- Split whatsapp router into legacy and new version with zod validation
- Add new platforms (instagram) and improve error handling
- Update dependencies and package.json type to module

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 # Copia este archivo a .env y rellena con tus credenciales
 
 # Server
-PORT=3000
+PORT=3030
+NODE_ENV=development
+LOG_LEVEL=debug
 
 # WhatsApp Cloud API (Facebook/Meta)
 WHATSAPP_VERIFY_TOKEN=your_verify_token
