--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "axios": "^1.6.8",
+    "axios-retry": "^4.5.0",
+    "bottleneck": "^2.19.5",
     "cloudinary": "^2.7.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "openai": "^4.53.2"
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "openai": "^4.53.2",
+    "pino": "^9.9.0",
+    "pino-http": "^10.5.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "pino-pretty": "^13.1.1"
   }
 }
