feat(whatsapp): add baileys provider support for whatsapp integration
Add alternative WhatsApp provider using Baileys library alongside existing Cloud API
- Include QR code authentication flow for Baileys
- Make webhook endpoints conditional based on provider
- Add new dependencies for Baileys implementation
- Implement message sending and receiving via Baileys

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ PORT=3030
 NODE_ENV=development
 LOG_LEVEL=debug
 
+# WhatsApp provider: cloud (Meta Graph API) | baileys (no oficial, requiere escanear QR)
+WHATSAPP_PROVIDER=cloud
+
 # WhatsApp Cloud API (Facebook/Meta)
 WHATSAPP_VERIFY_TOKEN=your_verify_token
 WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
