--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@whiskeysockets/baileys": "^6.7.18",
     "axios": "^1.6.8",
     "axios-retry": "^4.5.0",
     "bottleneck": "^2.19.5",
@@ -23,6 +24,7 @@
     "openai": "^4.53.2",
     "pino": "^9.9.0",
     "pino-http": "^10.5.0",
+    "qrcode-terminal": "^0.12.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
