feat(social-media): add support for Instagram web API and Twitter SDK
- Add new dependencies for Instagram web API, Twitter SDK, and Facebook SDK
- Implement Instagram web API provider with cookie-based authentication
- Add Twitter API v2 client for posting tweets
- Refactor Facebook Graph API client to use official FB SDK
- Add new environment variables for social media configurations
- Create endpoint to fetch Instagram posts via web API

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,13 @@ META_ACCESS_TOKEN=your_long_lived_access_token
 # OpenAI
 OPENAI_API_KEY=your_openai_api_key
 
+# Instagram provider: graph (Meta Graph API) | web (no oficial, requiere usuario/contraseña)
+INSTAGRAM_PROVIDER=graph
+# Para provider=web
+INSTAGRAM_USERNAME=your_instagram_username
+INSTAGRAM_PASSWORD=your_instagram_password
+INSTAGRAM_COOKIE_FILE=./instagram_cookies.json
+
 # Facebook/Instagram Graph API
 FACEBOOK_PAGE_ID=your_facebook_page_id
 INSTAGRAM_BUSINESS_ACCOUNT_ID=your_ig_business_account_id
