--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^8.0.1",
+    "fb": "^2.0.0",
     "helmet": "^8.1.0",
+    "instagram-web-api": "^2.2.2",
     "openai": "^4.53.2",
     "pino": "^9.9.0",
     "pino-http": "^10.5.0",
     "qrcode-terminal": "^0.12.0",
+    "tough-cookie-filestore2": "^1.0.0",
+    "twitter-api-sdk": "^1.2.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
