--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,57 @@
-# Copia este archivo a .env y rellena con tus credenciales
+# ===== PROVEEDOR DE IA =====
+# Selecciona el proveedor de IA: 'openai' o 'gemini'
+AI_PROVIDER=openai
 
-# Server
-PORT=3030
-NODE_ENV=development
-LOG_LEVEL=debug
-
-# WhatsApp provider: cloud (Meta Graph API) | baileys (no oficial, requiere escanear QR)
-WHATSAPP_PROVIDER=cloud
-
-# WhatsApp Cloud API (Facebook/Meta)
-WHATSAPP_VERIFY_TOKEN=your_verify_token
-WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
-META_ACCESS_TOKEN=your_long_lived_access_token
-
-# OpenAI
+# OpenAI (para planificación de posts con GPT)
 OPENAI_API_KEY=your_openai_api_key
 
-# Instagram provider: graph (Meta Graph API) | web (no oficial, requiere usuario/contraseña)
+# Google Gemini (alternativa a OpenAI)
+GEMINI_API_KEY=your_gemini_api_key
+
+# ===== WHATSAPP =====
+# Selecciona el proveedor: 'cloud' (oficial) o 'baileys' (no oficial)
+WHATSAPP_PROVIDER=cloud
+
+# WhatsApp Cloud API (proveedor oficial)
+WHATSAPP_VERIFY_TOKEN=your_verify_token
+WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
+META_ACCESS_TOKEN=your_meta_access_token
+
+# ===== INSTAGRAM =====
+# Selecciona el proveedor: 'graph' (oficial, requiere META_ACCESS_TOKEN) o 'web' (no oficial)
 INSTAGRAM_PROVIDER=graph
-# Para provider=web
+
+# Instagram Graph API (proveedor oficial, reutiliza META_ACCESS_TOKEN)
+INSTAGRAM_BUSINESS_ACCOUNT_ID=your_instagram_business_account_id
+
+# Instagram Web (proveedor no oficial, solo para imágenes)
 INSTAGRAM_USERNAME=your_instagram_username
 INSTAGRAM_PASSWORD=your_instagram_password
-INSTAGRAM_COOKIE_FILE=./instagram_cookies.json
 
-# Facebook/Instagram Graph API
+# ===== FACEBOOK =====
+# Facebook (Graph API, via SDK fb)
 FACEBOOK_PAGE_ID=your_facebook_page_id
-INSTAGRAM_BUSINESS_ACCOUNT_ID=your_ig_business_account_id
+# META_ACCESS_TOKEN (ya definido arriba, se reutiliza para Instagram Graph)
 
-# X (Twitter) API v2
+# ===== X (TWITTER) =====
+# X Bearer Token (requerido para tweets de texto)
 X_BEARER_TOKEN=your_x_bearer_token
+
+# X OAuth 1.0a (opcional, para flujos futuros de contexto de usuario)
 X_API_KEY=your_x_api_key
 X_API_SECRET=your_x_api_secret
 X_ACCESS_TOKEN=your_x_access_token
 X_ACCESS_SECRET=your_x_access_secret
 
-# Cloudinary
-CLOUDINARY_CLOUD_NAME=your_cloud_name
+# ===== CLOUDINARY =====
+# Cloudinary (para hosting de medios)
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
 CLOUDINARY_API_KEY=your_cloudinary_api_key
 CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+
+# Conservar medios en Cloudinary después de publicar (opcional)
+CLOUDINARY_KEEP_UPLOADS=false
+
+# ===== SERVIDOR =====
+# Puerto del servidor
+PORT=3030
