--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automatizar despliegues de posts a Facebook, X (Twitter) e Instagram vía WhatsApp + OpenAI",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "dev": "nodemon --ignore 'baileys_auth/**' --ignore 'instagram_cookies.json' src/server.js",
     "start": "node src/server.js"
   },
   "keywords": [],
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@whiskeysockets/baileys": "^6.7.18",
     "axios": "^1.6.8",
     "axios-retry": "^4.5.0",
