refactor(whatsapp): remove cloud provider and simplify to baileys only
- Remove WhatsApp Cloud API provider and related files (client, router)
- Update config to only support Baileys provider
- Simplify orchestrator to only handle Baileys media buffers
- Clean up .env.example and remove unused Instagram Graph API config
- Refactor Facebook and Instagram platform code for better error handling

--- a/.env.example
+++ b/.env.example
@@ -1,57 +1,31 @@
+# ===== SERVIDOR =====
+PORT=3030
+
 # ===== PROVEEDOR DE IA =====
-# Selecciona el proveedor de IA: 'openai' o 'gemini'
+# Selecciona: 'openai' o 'gemini'
 AI_PROVIDER=openai
-
-# OpenAI (para planificación de posts con GPT)
 OPENAI_API_KEY=your_openai_api_key
-
-# Google Gemini (alternativa a OpenAI)
 GEMINI_API_KEY=your_gemini_api_key
 
 # ===== WHATSAPP =====
-# Selecciona el proveedor: 'cloud' (oficial) o 'baileys' (no oficial)
-WHATSAPP_PROVIDER=cloud
+# Solo Baileys (no oficial) - No requiere configuración
+# Escanea el QR al iniciar el servidor
 
-# WhatsApp Cloud API (proveedor oficial)
-WHATSAPP_VERIFY_TOKEN=your_verify_token
-WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
+# ===== FACEBOOK =====
+# Usando librería 'fb' (no oficial)
+FACEBOOK_PAGE_ID=your_facebook_page_id
 META_ACCESS_TOKEN=your_meta_access_token
 
 # ===== INSTAGRAM =====
-# Selecciona el proveedor: 'graph' (oficial, requiere META_ACCESS_TOKEN) o 'web' (no oficial)
-INSTAGRAM_PROVIDER=graph
-
-# Instagram Graph API (proveedor oficial, reutiliza META_ACCESS_TOKEN)
-INSTAGRAM_BUSINESS_ACCOUNT_ID=your_instagram_business_account_id
-
-# Instagram Web (proveedor no oficial, solo para imágenes)
+# Usando 'instagram-web-api' (no oficial, solo imágenes)
 INSTAGRAM_USERNAME=your_instagram_username
 INSTAGRAM_PASSWORD=your_instagram_password
 
-# ===== FACEBOOK =====
-# Facebook (Graph API, via SDK fb)
-FACEBOOK_PAGE_ID=your_facebook_page_id
-# META_ACCESS_TOKEN (ya definido arriba, se reutiliza para Instagram Graph)
-
 # ===== X (TWITTER) =====
-# X Bearer Token (requerido para tweets de texto)
 X_BEARER_TOKEN=your_x_bearer_token
 
-# X OAuth 1.0a (opcional, para flujos futuros de contexto de usuario)
-X_API_KEY=your_x_api_key
-X_API_SECRET=your_x_api_secret
-X_ACCESS_TOKEN=your_x_access_token
-X_ACCESS_SECRET=your_x_access_secret
-
 # ===== CLOUDINARY =====
-# Cloudinary (para hosting de medios)
 CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
 CLOUDINARY_API_KEY=your_cloudinary_api_key
 CLOUDINARY_API_SECRET=your_cloudinary_api_secret
-
-# Conservar medios en Cloudinary después de publicar (opcional)
 CLOUDINARY_KEEP_UPLOADS=false
-
-# ===== SERVIDOR =====
-# Puerto del servidor
-PORT=3030
