--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-rate-limit": "^8.0.1",
     "fb": "^2.0.0",
     "helmet": "^8.1.0",
+    "instagram-api-web-node": "^5.2.31",
     "instagram-web-api": "^2.2.2",
     "openai": "^4.53.2",
     "pino": "^9.9.0",
