--- a/ui-chat/package.json
+++ b/ui-chat/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.11",
+    "@ai-sdk/react": "^2.0.29",
+    "@google/generative-ai": "^0.24.1",
+    "ai": "^5.0.29",
+    "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
