--- a/ui-chat/package.json
+++ b/ui-chat/package.json
@@ -15,10 +15,12 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.8",
     "next": "15.5.2",
+    "preline": "^3.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4"
   }
