--- a/ui-chat/package.json
+++ b/ui-chat/package.json
@@ -11,6 +11,7 @@
     "@ai-sdk/google": "^2.0.11",
     "@ai-sdk/react": "^2.0.29",
     "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.57.0",
     "ai": "^5.0.29",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.8",
