--- a/ui-chat/package.json
+++ b/ui-chat/package.json
@@ -18,7 +18,8 @@
     "next": "15.5.2",
     "preline": "^3.2.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "cloudinary": "^2.7.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
