--- a/version_ui_chat/.env.example
+++ b/version_ui_chat/.env.example
@@ -1,13 +1,17 @@
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
 GOOGLE_GENERATIVE_AI_API_KEY=
+
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 CLOUDINARY_KEEP_UPLOADS=
+
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 FACEBOOK_REDIRECT_URI=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 APP_URL=http://localhost:3000
@@ -15,3 +19,7 @@ GOOGLE_OAUTH_REDIRECT_URI=http://localhost:3000/api/youtube/callback
 YOUTUBE_OAUTH_SCOPES=openid https://www.googleapis.com/auth/youtube.upload https://www.googleapis.com/auth/youtube.readonly
 GOOGLE_OAUTH_ACCESS_TYPE=offline
 GOOGLE_OAUTH_PROMPT=consent
+
+TIKTOK_REDIRECT_URI=http://localhost:3000/api/tiktok/callback
+TIKTOK_CLIENT_KEY=
+TIKTOK_CLIENT_SECRET=
