feat(database): add database setup script and update env example
Add complete database schema for social media automation including tables for profiles and messages, with RLS policies and triggers. Update env.example with new required environment variables for OAuth integrations.

--- a/version_ui_chat/.env.example
+++ b/version_ui_chat/.env.example
@@ -1,25 +1,31 @@
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
 
 GOOGLE_GENERATIVE_AI_API_KEY=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_OAUTH_REDIRECT_URI=
+GOOGLE_OAUTH_ACCESS_TYPE=
+GOOGLE_OAUTH_PROMPT=
 
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
-CLOUDINARY_KEEP_UPLOADS=
+CLOUDINARY_KEEP_UPLOADS=false
 
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 FACEBOOK_REDIRECT_URI=
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-APP_URL=http://localhost:3000
-GOOGLE_OAUTH_REDIRECT_URI=http://localhost:3000/api/youtube/callback
-YOUTUBE_OAUTH_SCOPES=openid https://www.googleapis.com/auth/youtube.upload https://www.googleapis.com/auth/youtube.readonly
-GOOGLE_OAUTH_ACCESS_TYPE=offline
-GOOGLE_OAUTH_PROMPT=consent
+APP_URL=
 
-TIKTOK_REDIRECT_URI=http://localhost:3000/api/tiktok/callback
+YOUTUBE_OAUTH_SCOPES=openid https://www.googleapis.com/auth/youtube.upload https://www.googleapis.com/auth/youtube.readonly
+
+TIKTOK_REDIRECT_URI=
 TIKTOK_CLIENT_KEY=
 TIKTOK_CLIENT_SECRET=
+
+INSTAGRAM_APP_ID=
+INSTAGRAM_APP_SECRET=
+INSTAGRAM_REDIRECT_URI=
