--- a/version_ui_chat/.env.example
+++ b/version_ui_chat/.env.example
@@ -1,6 +1,10 @@
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
+# Cron Job Security
+CRON_SECRET=your_secure_random_string_for_cron_jobs
 
 GOOGLE_GENERATIVE_AI_API_KEY=
 GOOGLE_CLIENT_ID=
