--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,12 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # Cron Job Security
 CRON_SECRET=your_secure_random_string_for_cron_jobs
 
+# AI Providers
 GOOGLE_GENERATIVE_AI_API_KEY=
+OPENAI_API_KEY=
+DEEPSEEK_API_KEY=
+
+# Google OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_OAUTH_REDIRECT_URI=
