--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.11",
+    "@ai-sdk/openai": "^2.0.30",
     "@ai-sdk/react": "^2.0.29",
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.57.0",
@@ -31,11 +32,11 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.5.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "tailwindcss": "^4"
   }
 }
