feat(chat): add zod for schema validation and improve tool parameters
refactor(chat): replace manual parameter definitions with zod schemas
style(widget): adjust UI styling and remove redundant elements
chore(deps): add zod dependency and update package-lock

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "preline": "^3.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
