feat(api): increase maxDuration and add nodejs runtime for chat API
- Increase maxDuration from 60 to 120 for upload and chat APIs
- Add nodejs runtime to chat API route
- Update OpenAI provider initialization to use createOpenAI
- Add optional chaining for ai_model and ai_api_key access

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "functions": {
     "src/app/api/upload/route.js": {
-      "maxDuration": 60
+      "maxDuration": 120
+    },
+    "src/app/api/chat/route.js": {
+      "maxDuration": 120
     }
   }
 }
